--- a/Les Calanques/Base.lproj/Main.storyboard
+++ b/Les Calanques/Base.lproj/Main.storyboard
@@ -64,19 +64,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="callelongue" translatesAutoresizingMaskIntoConstraints="NO" id="Ffg-AS-3Oi">
-                                                    <rect key="frame" x="0.0" y="2" width="300" height="195"/>
+                                                    <rect key="frame" x="0.0" y="2" width="355" height="195"/>
                                                 </imageView>
                                                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AEd-jk-2a4">
-                                                    <rect key="frame" x="0.0" y="137" width="300" height="60"/>
+                                                    <rect key="frame" x="0.0" y="137" width="355" height="60"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Qaz-eX-sAq">
-                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="60"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
                                                             <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QG4-yA-v1R">
-                                                                <rect key="frame" x="0.0" y="0.0" width="300" height="60"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="Myx-Zd-GSX">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="300" height="60"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="355" height="60"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 </view>
                                                                 <vibrancyEffect>
@@ -91,7 +91,7 @@
                                                     <blurEffect style="light"/>
                                                 </visualEffectView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="11" translatesAutoresizingMaskIntoConstraints="NO" id="Rka-h0-Yw3">
-                                                    <rect key="frame" x="0.0" y="137" width="300" height="60"/>
+                                                    <rect key="frame" x="0.0" y="137" width="355" height="60"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="gQC-Fl-vKO"/>
                                                     </constraints>
@@ -192,6 +192,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="mdy-T2-EZz" id="apk-R5-Xlt"/>
+                        <segue destination="6WR-qQ-thB" kind="show" identifier="Detail" id="ICE-kf-cB1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
@@ -501,6 +502,6 @@
         <image name="sugiton" width="1600" height="896"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="13Y-LZ-gLB"/>
+        <segue reference="ICE-kf-cB1"/>
     </inferredMetricsTieBreakers>
 </document>
